--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./build/index.js",
   "scripts": {
     "build": "rm -rf build && babel src --out-dir build",
-    "prepublish": "npm run build",
+    "prepublish": "yarn build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
