--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   "devDependencies": {
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0"
+    "@babel/preset-env": "^7.1.0",
+    "yarn": "^1.13.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "core-js": "^2.5.7",
+    "node-fetch": "^2.3.0",
     "semver": "^5.5.1"
   }
 }
